# CrcEngine

./: .gitattributes  .gitignore  .pylintrc  .readthedocs.yaml  .travis.yml  BUILDING.md  CHANGES.rst  HISTORY.rst  MANIFEST.in  Makefile  README.md  README.rst  codeql-analysis.yml  crcengine.py  crcpylib.py  dev-requirements.in  dev-requirements.txt  dev-requirements.txt.orig  poetry_py_version.ps1  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  test_crcengine.py  test_crclib.py  test_crcpylib.py  tox.ini
.github/ISSUE_TEMPLATE/workflows/: superlinter.yml
.github/workflows/: codeql-analysis.yml  python-package.yml
crcengine/: __init__.py  _version.py  algorithms.py  codegen.py  crcengine.py
crcengine/templates/: c_template
docs/: Makefile  make.bat  requirements.txt
docs/source/: conf.py  crcengine.rst  index.rst  modules.rst  readme.rst
examples/: example.py
scripts/: fix_win_bash_venv  fix_win_venv
src/crcengine/: __init__.py  __main__.py  algorithms.py  calc.py  codegen.py  crcengine.py  version.py
src/crcengine/templates/: c_template  h_template  test_template
tests/: conftest.py  test_algorithms.py  test_code_gen.py  test_crcengine.py  test_range_calc.py  test_version.py
tests/c_tests/: project.yml
tests/c_tests/test/: test_crc15_can.c  test_crc16_autosar.c  test_crc16_ccitt_false.c  test_crc16_ccitt_true.c  test_crc16_cdma2000.c  test_crc16_ibm.c  test_crc16_kermit.c  test_crc16_modbus.c  test_crc16_profibus.c  test_crc16_xmodem.c  test_crc24_flexray16_a.c  test_crc24_flexray16_b.c  test_crc32.c  test_crc32_bzip2.c  test_crc32_c.c  test_crc5_usb.c  test_crc64_ecma.c  test_crc8.c  test_crc8_autosar.c  test_crc8_bluetooth.c  test_crc8_ccitt.c  test_crc8_gsm_b.c  test_crc8_sae_j1850.c  test_myreverse8.c
