[build-system]
requires = ["poetry-core >=1.2"]
build-backend = "poetry.core.masonry.api"

# Old build system settings for setuptools
#[build-system]
#requires = ["setuptools", "wheel"]
#build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.poetry]
name = "crcengine"
version = "0.4a1"
description = "A library for CRC calculation and code generation"
authors = [ "Garden Tools <gardensofdorwinion@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.rst"
repository = "https://github.com/GardenTools/crcengine"
documentation = "https://crcengine.readthedocs.io/en/latest/"
keywords = ["crcengine", "CRC", "cyclic", "redundancy", "check", "checksum", "code-generation", "Castagnoli", "CRC32", "CRC16-CCITT"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: C",
    "Topic :: Communications",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
# pylint 2.17 has a minimum python version of 3.7.2
python ="^3.7.2"
jinja2 = ">=2.7"
# python 3.8 has importlib.metadata built-in
importlib-metadata =  { version = ">=3.6", python = "<3.8" }

[tool.poetry.group.dev.dependencies]
flake8 = ">=3.0"
pylint = "^2.17"
pytest = ">=3.0.0"
pytest-cov = "*"
tox = ">=3.4"
twine  = "*" # not sure this is still needed

[tool.poetry.group.docs.dependencies]
sphinx = "^5.0"

[tool.poetry.scripts]
crcengine = "crcengine.__main__:main"
