[metadata]
name = crcengine
description = A library for CRC calculation
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
author  = Garden Tools
author_email = gardensofdorwinion@gmail.com
python_requires =
    >=3.6
license = GNU General Public License v3
long_description  = file: README.rst
long_description_content_type = text/x-rst
keywords = crcengine crc cyclic redundancy check checksum
url = https://github.com/GardenTools/crcengine
version = attr: crcengine.version.__version__

[options]
# We load the template data files so this package isn't zip safe
include_package_data = True
zip_safe = False
package_dir =
    = src
packages =
    crcengine
install_requires =
    jinja2>=2.7

[options.entry_points]
console_scripts =
    crcengine = crcengine.__main__:main

[bdist_wheel]
# Pure python, but Python 2 not supported, so not universal = 1

[flake8]
exclude = docs

[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]

